[gd_scene load_steps=25 format=3 uid="uid://scm45pwotsuy"]

[ext_resource type="Texture2D" uid="uid://bh6m5k56qbwp3" path="res://Assets/GlobalSprites/white.png" id="1_gkjg1"]
[ext_resource type="Texture2D" uid="uid://3qkkqoxsm1vo" path="res://Assets/GlobalSprites/Logo.png" id="2_ee4eu"]
[ext_resource type="Texture2D" uid="uid://nx4t75osmwxy" path="res://Scenes/MainMenu/Sprites/FinalReflex.png" id="3_txptg"]
[ext_resource type="Shader" uid="uid://dkfl1o38khvby" path="res://Assets/Shaders/MenuWaterRipples.gdshader" id="4_cmo68"]
[ext_resource type="Texture2D" uid="uid://bgb3gn42levqf" path="res://Scenes/MainMenu/Sprites/TreesReflex.png" id="5_5o35t"]
[ext_resource type="Shader" uid="uid://bjb35jc5mloxj" path="res://Assets/Shaders/backgroundWater.gdshader" id="6_ahojg"]
[ext_resource type="Texture2D" uid="uid://dm1m1g5s384xf" path="res://Scenes/MainMenu/Sprites/Final.png" id="7_fwa5k"]
[ext_resource type="Script" uid="uid://blmeps7tlr8e3" path="res://Scenes/MainMenu/Scripts/frogMenu.gd" id="8_rw3b1"]
[ext_resource type="Script" uid="uid://cbu64fo3hhv7h" path="res://Scenes/MainMenu/Scripts/MainMenuStateManager.gd" id="9_e4du8"]
[ext_resource type="Script" uid="uid://ssvb6m61nvdy" path="res://Scenes/MainMenu/Scripts/MenuStates/pressStartMenuState.gd" id="10_trxxf"]
[ext_resource type="Script" uid="uid://b3tfddo81rvv4" path="res://Scenes/MainMenu/Scripts/MenuStates/MainMenuState.gd" id="11_4gy81"]
[ext_resource type="Script" uid="uid://sp75yb1lxjmf" path="res://Scenes/MainMenu/Scripts/MenuStates/PlayGameMenuState.gd" id="12_38te7"]
[ext_resource type="Script" uid="uid://r72lic1c24gs" path="res://Scenes/MainMenu/Scripts/MenuStates/CreditsMenuState.gd" id="13_v0wod"]
[ext_resource type="Script" uid="uid://chs77pk35cs56" path="res://Scenes/MainMenu/Scripts/MenuStates/OptionsMenuState.gd" id="14_sk70k"]
[ext_resource type="Script" uid="uid://b3y0yn0vlcje3" path="res://Scenes/MainMenu/Scripts/MenuStates/ExitMenuState.gd" id="15_jtvy7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_853f1"]
texture = ExtResource("1_gkjg1")
expand_margin_left = 429.0
expand_margin_top = 270.0
expand_margin_right = 238.0
expand_margin_bottom = 206.0
modulate_color = Color(0.337156, 0.508522, 0.253832, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cmrfp"]
shader = ExtResource("4_cmo68")
shader_parameter/WATER_COL = Color(0.337255, 0.509804, 0.254902, 1)
shader_parameter/WATER2_COL = Color(0.337255, 0.627451, 0.254902, 1)
shader_parameter/FOAM_COL = Color(0.649842, 0.815472, 0.429061, 1)
shader_parameter/distortion_speed = 4.765
shader_parameter/tile = Vector2(0.295, 0.48)
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_df05h"]
noise_type = 0
frequency = 0.03

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8um5k"]
seamless = true
noise = SubResource("FastNoiseLite_df05h")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xim88"]
shader = ExtResource("6_ahojg")
shader_parameter/wave_speed = Vector2(0.055, 0.01)
shader_parameter/distorcion = 0.033
shader_parameter/noise_texture = SubResource("NoiseTexture2D_8um5k")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gkjg1"]

[sub_resource type="Animation" id="Animation_gkjg1"]
resource_name = "FadeInFadeOut"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ee4eu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_txptg"]
_data = {
&"FadeInFadeOut": SubResource("Animation_gkjg1"),
&"RESET": SubResource("Animation_ee4eu")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PrompsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_853f1")

[node name="LogoReflexion" type="TextureRect" parent="PrompsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -674.0
offset_top = -153.0
offset_right = 916.0
offset_bottom = 269.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.554151, 0.362897)
mouse_filter = 2
texture = ExtResource("2_ee4eu")
expand_mode = 3
flip_v = true

[node name="FrogReflexion" type="TextureRect" parent="PrompsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -105.0
offset_right = 301.714
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_txptg")
expand_mode = 3
flip_h = true

[node name="WaterRipples" type="TextureRect" parent="PrompsPanel"]
modulate = Color(1, 1, 0, 0.211765)
material = SubResource("ShaderMaterial_cmrfp")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1240.0
offset_top = -402.0
offset_right = 1008.0
offset_bottom = 682.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_gkjg1")
expand_mode = 3
flip_h = true

[node name="TreesReflexionCenter" type="TextureRect" parent="PrompsPanel"]
modulate = Color(1, 1, 0, 0.67451)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -770.0
offset_top = -1030.0
offset_right = 708.0
offset_bottom = -266.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.64)
mouse_filter = 2
texture = ExtResource("5_5o35t")
expand_mode = 3
flip_h = true

[node name="TreesReflexionLeft" type="TextureRect" parent="PrompsPanel"]
modulate = Color(1, 1, 0, 0.67451)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2248.0
offset_top = -1090.0
offset_right = -770.0
offset_bottom = -326.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.64)
mouse_filter = 2
texture = ExtResource("5_5o35t")
expand_mode = 3
flip_h = true

[node name="TreesReflexionRight" type="TextureRect" parent="PrompsPanel"]
modulate = Color(1, 1, 0, 0.67451)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1134.0
offset_top = -1125.0
offset_right = 2612.0
offset_bottom = -361.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.12381
scale = Vector2(1.0022, 1.70985)
mouse_filter = 2
texture = ExtResource("5_5o35t")
expand_mode = 3
flip_h = true

[node name="TreesReflexionTop" type="TextureRect" parent="PrompsPanel"]
modulate = Color(1, 1, 0, 0.67451)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1240.0
offset_top = -1235.0
offset_right = 238.0
offset_bottom = -471.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.24316, 2.12095)
mouse_filter = 2
texture = ExtResource("5_5o35t")
expand_mode = 3
flip_h = true
flip_v = true

[node name="Water" type="TextureRect" parent="PrompsPanel"]
material = SubResource("ShaderMaterial_xim88")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -368.0
offset_top = -80.0
offset_right = 1026.0
offset_bottom = 578.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.677083, 0.655556)
mouse_filter = 2
texture = ExtResource("1_gkjg1")
expand_mode = 1

[node name="Logo" type="TextureRect" parent="PrompsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -630.0
offset_top = -352.0
offset_right = 984.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.56758, 0.56758)
mouse_filter = 2
texture = ExtResource("2_ee4eu")
expand_mode = 3

[node name="Frog" type="TextureRect" parent="PrompsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -520.0
offset_top = -153.0
offset_right = 166.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("7_fwa5k")
expand_mode = 3
flip_h = true
script = ExtResource("8_rw3b1")
amplitude_posicao = Vector2(1, 1)
amplitude_rotacao = 0.01
velocidade = 0.5

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(514, 307)

[node name="HUDLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Panel" type="Panel" parent="HUDLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_gkjg1")

[node name="PressAnyButtonLabel" type="Label" parent="HUDLayer/Panel"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -155.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "PRESSIONE QUALQUER BOT√ÉO PARA CONTINUAR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUDLayer/Panel/PressAnyButtonLabel"]
libraries = {
&"": SubResource("AnimationLibrary_txptg")
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("9_e4du8")

[node name="PressStart" type="Node" parent="StateMachine"]
script = ExtResource("10_trxxf")

[node name="MainMenu" type="Node" parent="StateMachine"]
script = ExtResource("11_4gy81")

[node name="PlayGame" type="Node" parent="StateMachine"]
script = ExtResource("12_38te7")

[node name="Credits" type="Node" parent="StateMachine"]
script = ExtResource("13_v0wod")

[node name="Options" type="Node" parent="StateMachine"]
script = ExtResource("14_sk70k")

[node name="Exit" type="Node" parent="StateMachine"]
script = ExtResource("15_jtvy7")
